--- a/code/web/template/login.ejs
+++ b/code/web/template/login.ejs
@@ -11,6 +11,7 @@
             <input type="text" id="inputEmail" class="form-control" placeholder="Identifiant" required>
             <input type="password" id="inputPassword" class="form-control" placeholder="Mot de passe" required>
             <button class="btn btn-primary" type="submit">Se connecter</button>
+            <a class="btn btn-secondary" href="register">S'inscrire</a>
         </form>
         <footer>
             <%- include('footer'); %>
