--- a/code/web/template/login.ejs
+++ b/code/web/template/login.ejs
@@ -8,7 +8,7 @@
     <body class="text-center">
         <form class="form-signin">
             <h1 class="h3 mb-3">Connexion</h1>
-            <input type="text" id="inputEmail" class="form-control" placeholder="Identifiant" required>
+            <input type="text" id="inputLogin" class="form-control" placeholder="Identifiant" required>
             <input type="password" id="inputPassword" class="form-control" placeholder="Mot de passe" required>
             <button class="btn btn-primary" type="submit">Se connecter</button>
             <a class="btn btn-secondary" href="register">S'inscrire</a>
