--- a/code/web/data/css/login.css
+++ b/code/web/data/css/login.css
@@ -5,7 +5,7 @@
     margin: 0 auto;
 }
 
-#inputEmail {
+#inputLogin {
     margin-bottom: -1px;
     border-bottom-right-radius: 0;
     border-bottom-left-radius: 0;
