--- a/code/web/template/createProject.ejs
+++ b/code/web/template/createProject.ejs
@@ -3,5 +3,6 @@
     <h1 class="h3 mb-3">Créer un nouveau Projet</h1>
     <input type="text" id="inputTitle" class="form-control form-top" placeholder="Titre du projet" required>
     <input type="textarea" id="inputDescription" class="form-control form-top" placeholder="Description du projet" required>
+    <input type="hidden" id="inputUser" class="form-control form-top" required value="<%= user.id %>">
     <button class="btn btn-primary" type="submit">Créer</button>
 </form>
