--- a/code/web/template/head.ejs
+++ b/code/web/template/head.ejs
@@ -1,5 +1,6 @@
 <meta charset="UTF-8">
 <title>CDP</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- CSS (load bootstrap from a CDN) -->
 <link rel="stylesheet" href="bootstrap.min.css">
