--- a/code/web/template/login.ejs
+++ b/code/web/template/login.ejs
@@ -5,14 +5,18 @@
         <link rel="stylesheet" href="login.css">
     </head>
 
-    <body class="text-center">
-        <form class="form-signin">
-            <h1 class="h3 mb-3">Connexion</h1>
-            <input type="text" id="inputLogin" class="form-control form-top" placeholder="Identifiant" required>
-            <input type="password" id="inputPassword" class="form-control form-bottom" placeholder="Mot de passe" required>
-            <button class="btn btn-primary" type="submit">Se connecter</button>
-            <a class="btn btn-secondary" href="register">S'inscrire</a>
-        </form>
+    <body class="container">
+        <div class="row justify-content-center">
+            <div class="col-4">
+                <form class="form-signin" method="post" action="/user/login">
+                    <h1 class="h3 mb-3">Connexion</h1>
+                    <input type="text" id="inputLogin" name="username" class="form-control form-top" placeholder="Identifiant" required>
+                    <input type="password" id="inputPassword"i name="password" class="form-control form-bottom" placeholder="Mot de passe" required>
+                    <button class="btn btn-primary" type="submit">Se connecter</button>
+                    <a class="btn btn-secondary" href="/user/signup">S'inscrire</a>
+                </form>
+            </div>
+        </div>
         <footer>
             <%- include('footer'); %>
         </footer>
