--- a/code/web/template/register.ejs
+++ b/code/web/template/register.ejs
@@ -5,16 +5,20 @@
         <link rel="stylesheet" href="register.css">
     </head>
 
-    <body class="text-center">
-        <form class="form-signup">
-            <h1 class="h3 mb-3">Inscription</h1>
-            <input type="email" id="inputEmail" class="form-control form-top" placeholder="Adresse e-mail" required>
-            <input type="text" id="inputLogin" class="form-control form-middle" placeholder="Identifiant de connexion" required>
-            <input type="text" id="inputNickname" class="form-control form-middle" placeholder="Pseudonyme" required>
-            <input type="password" id="inputPassword" class="form-control form-bottom" placeholder="Mot de passe" required minlength="8">
-            <button class="btn btn-primary" type="submit">S'inscrire</button>
-            <a class="btn btn-secondary" href="/">Se connecter</a>
-        </form>
+    <body class="container">
+        <div class="row justify-content-center">
+            <div class="col-6">
+                <form method="post" action="/user/signup">
+                    <h1 class="h3 mb-3">Inscription</h1>
+                    <input type="email" id="inputEmail" name="mail" class="form-control form-top" placeholder="Adresse e-mail" required>
+                    <input type="text" id="inputNickname" name="username" class="form-control form-middle" placeholder="Pseudonyme" required>
+                    <input type="password" id="inputPassword" name="password" class="form-control form-bottom" placeholder="Mot de passe" required minlength="8">
+                    <input type="password" id="inputPassword" name="passwordConfirmation" class="form-control form-bottom" placeholder="confirmation du mot de passe" required minlength="8">
+                    <button class="btn btn-primary" type="submit">S'inscrire</button>
+                    <a class="btn btn-secondary" href="/user/login">Se connecter</a>
+                </form>
+            </div>
+        </div>
         <footer>
             <%- include('footer'); %>
         </footer>
