--- a/code/web/template/register.ejs
+++ b/code/web/template/register.ejs
@@ -2,12 +2,44 @@
 <html lang="fr">
     <head>
         <%- include('head'); %>
-        <link rel="stylesheet" href="register.css">
     </head>
 
-    <body class="container">
+    <body class="container bg-secondary" method="post" action="/user/signup">
+        <div class="row justify-content-center my-5">
+            <div class="col-4 d-flex justify-content-center flex-column bg-light py-3 rounded">
+                <h6 class="text-center">J'ai déjà un compte</h6>
+                <a class="btn btn-primary btn-sm" href="/user/login">SE CONNECTER</a>
+            </div>
+        </div>
+
         <div class="row justify-content-center">
-            <div class="col-6">
+            <div class="col-4 bg-light py-3 rounded">
+                <h6 class="text-center">Nouveau sur notre site ?</h6>
+                <p class="text-center">Saisissez vos informations pour continuer</p>
+                <form method="POST" action="/user/signup">
+                    <div class="form-group">
+                        <input type="email" class="form-control" id="mail" name="mail" aria-describedby="emailHelp" placeholder="Entrer votre email" required>
+                    </div>
+                    <div class="form-group">
+                        <input type="text" class="form-control" id="username" name="username" aria-describedby="emailHelp" placeholder="Entrer votre Pseudonyme" required>
+                    </div>
+                    <div class="form-group">
+                        <input type="password" class="form-control" name="password" id="password" placeholder="entrer votre mot de passe" required>
+                    </div>
+                    <div class="form-group">
+                        <input type="password" class="form-control" name="passwordConfirmation" id="passwordConfirmation" placeholder="entrer à nouveau votre mot de passe" required>
+                    </div>
+                    <% if (locals.error) { %>
+                    <div class="text-danger">une erreur s'est produite</div><br>
+                    <% } %>
+                    <button type="submit" class="btn btn-primary">S'inscrire</button>
+                </form>
+            </div>
+        </div>
+    </body>
+</html>
+
+<!--
                 <form method="post" action="/user/signup">
                     <h1 class="h3 mb-3">Inscription</h1>
                     <input type="email" id="inputEmail" name="mail" class="form-control form-top" placeholder="Adresse e-mail" required>
@@ -17,10 +49,4 @@
                     <button class="btn btn-primary" type="submit">S'inscrire</button>
                     <a class="btn btn-secondary" href="/user/login">Se connecter</a>
                 </form>
-            </div>
-        </div>
-        <footer>
-            <%- include('footer'); %>
-        </footer>
-    </body>
-</html>
+            -->
