--- a/code/web/template/login.ejs
+++ b/code/web/template/login.ejs
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="login.css">
     </head>
 
-    <body class="container">
+    <body class="container text-center">
         <div class="row justify-content-center">
             <div class="col-4">
                 <form class="form-signin" method="post" action="/user/login">
