--- a/code/web/template/login.ejs
+++ b/code/web/template/login.ejs
@@ -11,9 +11,9 @@
                 <form class="form-signin" method="post" action="/user/login">
                     <h1 class="h3 mb-3">Connexion</h1>
                     <input type="text" id="inputLogin" name="username" class="form-control form-top" placeholder="Identifiant" required>
-                    <input type="password" id="inputPassword"i name="password" class="form-control form-bottom" placeholder="Mot de passe" required>
+                    <input type="password" id="inputPassword" name="password" class="form-control form-bottom mb-2" placeholder="Mot de passe" required>
                     <button class="btn btn-primary" type="submit">Se connecter</button>
-                    <a class="btn btn-secondary" href="/user/signup">S'inscrire</a>
+                    <a class="btn btn-secondary" href="signup">S'inscrire</a>
                 </form>
             </div>
         </div>
