--- a/code/web/template/register.ejs
+++ b/code/web/template/register.ejs
@@ -2,20 +2,20 @@
 <html lang="fr">
     <head>
         <%- include('head'); %>
-        <link rel="stylesheet" href="register.css">
+        <link rel="stylesheet" type="text/css" href="register.css">
     </head>
 
-    <body class="container">
+    <body class="container text-center">
         <div class="row justify-content-center">
             <div class="col-6">
                 <form method="post" action="/user/signup">
                     <h1 class="h3 mb-3">Inscription</h1>
                     <input type="email" id="inputEmail" name="mail" class="form-control form-top" placeholder="Adresse e-mail" required>
                     <input type="text" id="inputNickname" name="username" class="form-control form-middle" placeholder="Pseudonyme" required>
-                    <input type="password" id="inputPassword" name="password" class="form-control form-bottom" placeholder="Mot de passe" required minlength="8">
-                    <input type="password" id="inputPassword" name="passwordConfirmation" class="form-control form-bottom" placeholder="confirmation du mot de passe" required minlength="8">
+                    <input type="password" id="inputPassword" name="password" class="form-control form-middle" placeholder="Mot de passe" required minlength="8">
+                    <input type="password" id="inputPasswordConfirm" name="passwordConfirmation" class="form-control form-bottom" placeholder="Confirmation du mot de passe" required minlength="8">
                     <button class="btn btn-primary" type="submit">S'inscrire</button>
-                    <a class="btn btn-secondary" href="/user/login">Se connecter</a>
+                    <a class="btn btn-secondary" href="login">Se connecter</a>
                 </form>
             </div>
         </div>
