--- a/code/web/template/head.ejs
+++ b/code/web/template/head.ejs
@@ -5,4 +5,4 @@
 <!-- CSS (load bootstrap from a CDN) -->
 <!-- <link rel="stylesheet" href="bootstrap.min.css"> -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="/css/style.css">
