--- a/code/web/template/login.ejs
+++ b/code/web/template/login.ejs
@@ -2,7 +2,7 @@
 <html lang="fr">
     <head>
         <%- include('head'); %>
-        <link rel="stylesheet" href="login.css">
+        <link rel="stylesheet" href="/css/login.css">
     </head>
 
     <body class="container">
