--- a/code/web/template/register.ejs
+++ b/code/web/template/register.ejs
@@ -2,7 +2,7 @@
 <html lang="fr">
     <head>
         <%- include('head'); %>
-        <link rel="stylesheet" type="text/css" href="register.css">
+        <link rel="stylesheet" type="text/css" href="/css/register.css">
     </head>
 
     <body class="container text-center">
