--- a/code/web/template/createProject.ejs
+++ b/code/web/template/createProject.ejs
@@ -1,8 +1,26 @@
+<!DOCTYPE html>
+<html lang="fr">
+    <head>
+        <%- include('head'); %>
+    </head>
 
-<form class="form-signup">
-    <h1 class="h3 mb-3">Créer un nouveau Projet</h1>
-    <input type="text" id="inputTitle" class="form-control form-top" placeholder="Titre du projet" required>
-    <input type="textarea" id="inputDescription" class="form-control form-top" placeholder="Description du projet" required>
-    <input type="hidden" id="inputUser" class="form-control form-top" required value="<%= user.id %>">
-    <button class="btn btn-primary" type="submit">Créer</button>
-</form>
+    <body>
+        <h1 class="text-center">Créer un projet</h1>
+        <div class="container text-center">
+            <div class="row justify-content-center">
+                <div class="col-6">
+                    <form class="form-signup" method="post" action="/project/new" autocomplete="off">
+                        <input type="text" id="inputTitle" name="title" class="form-control form-top" placeholder="Titre du projet (Obligatoire)" required>
+                        <textarea id="inputDescription" name="description" class="form-control form-bottom" placeholder="Description du projet (Optionnel)"></textarea>
+                        <button class="btn btn-primary" type="submit">Créer</button>
+                        <a class="btn btn-secondary" href="/project">Annuler</a>
+                    </form>
+                </div>
+            </div>
+        </div>
+
+        <footer>
+            <%- include('footer'); %>
+        </footer>
+    </body>
+</html>
