--- a/code/web/template/backlog.ejs
+++ b/code/web/template/backlog.ejs
@@ -8,7 +8,7 @@
 
     <!-- Button trigger modal -->
     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-    Launch demo modal
+        Créer US
     </button>
 
     <!-- Modal -->
@@ -27,19 +27,21 @@
                     <div class="col">
                         <form method="POST" action="/backlog/us">
                             <div class="form-group">
-                                <label for="description">Description</label><br>
-                                <textarea name="description" id="description" cols="30" rows="5"></textarea>
+                                <input type="hidden" name="idProject" value="<%= userStories.projectId %>">
                             </div>
                             <div class="form-group">
-                                <select class="custom-select">
-                                <option selected>selectionnez une priorité</option>
-                                <option value="1">minimale</option>
-                                <option value="2">normale</option>
-                                <option value="3">maximale</option>
-                                </select>
+                                <label for="description">Description</label><br>
+                                <textarea name="description" id="description" cols="30" rows="5" required></textarea>
+                            </div>
+                            <div class="form-group">
+                                <select class="custom-select" name="importance">
+                                    <option value="1">minimale</option>
+                                    <option value="2" selected="selected">normale</option>
+                                    <option value="3">maximale</option>
+                                    </select>
                             </div>
                             <label for="customRange2">Priorité</label>
-                            <input type="range" class="custom-range" min="0" max="100" id="customRange2">
+                            <input type="range" name="difficulty" class="custom-range" min="0" max="100" id="customRange2">
 
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Annuler</button>
                             <button type="submit" class="btn btn-primary">Créer</button>
