--- a/code/web/template/backlog.ejs
+++ b/code/web/template/backlog.ejs
@@ -26,7 +26,7 @@
                     </thead>
                     <tbody>
                         <% for(let i=0; i<userStories.userStories.length; i++) { %> 
-                        <tr>
+                        <tr class="backlogLine">
                             <th scope="row"><%= userStories.userStories[i].id %></th>
                             <td><%= userStories.userStories[i].label %></td>
                             <td><%= userStories.userStories[i].importance %></td>
@@ -36,6 +36,26 @@
                         <% } %>
                     </tbody>
                 </table>
+            </div>
+            <div class="col-4" id="infosUs">
+                 <form method="POST" onsubmit="onFormSubmit(this);">
+                    <div class="form-group">
+                        <label for="description">Description</label><br>
+                        <textarea name="description" id="description" cols="30" rows="5" required></textarea>
+                    </div>
+                    <div class="form-group">
+                        <select class="custom-select" name="importance" id="importance">
+                            <option value="1">maximale</option>
+                            <option value="2" selected="selected">normale</option>
+                            <option value="3">minimale</option>
+                        </select>
+                    </div>
+                    <label for="customRange2">Priorité</label>
+                    <input type="range" id="priority" name="difficulty" class="custom-range" min="1" max="100" id="customRange2">
+
+                    <button type="submit" class="btn btn-primary">Enregistrer</button>
+                    <button type="button" id="fermer" class="btn btn-secondary">Fermer</button>
+                </form>
             </div>
         </div>
     </div>
@@ -92,5 +112,6 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+    <script src="/js/backlog.js"></script>
 </body>
 </html>
