mise en place de selenium et deux tests e2e

--- a/code/web/template/register.ejs
+++ b/code/web/template/register.ejs
@@ -33,7 +33,7 @@
                     <% if (typeof error != 'undefined') { %>
                     <div class="text-danger text-center"><%= error %></div><br>
                     <% } %>
-                    <button type="submit" class="btn btn-primary">S'inscrire</button>
+                    <button type="submit" id="btnRegister" class="btn btn-primary">S'inscrire</button>
                 </form>
             </div>
         </div>
