implementation de la T01

--- a/code/web/template/backlog.ejs
+++ b/code/web/template/backlog.ejs
@@ -11,6 +11,9 @@
                 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
                     Créer US
                 </button>
+                <form action="/sprint" method="post">
+                    <button type="submit" class="btn btn-primary"> Créer sprint </button>
+                </form>
             </div>
        </div>
         <div class="row">
