--- a/code/web/template/backlog.ejs
+++ b/code/web/template/backlog.ejs
@@ -19,15 +19,15 @@
         <div class="row">
             <div class="col-8">
                    <ul class="list-group">
-                        <% for(let i=0; i<userStories.userStories.length; i++) { %> 
+                        <% for(let i=0; i<response.userStories.length; i++) { %> 
                         <li class="backlogLine list-group-item d-flex justify-content-between">
                             <span scope="row">
-                                <span><%= userStories.userStories[i].id %> </span> &ensp;
-                                <span><%= userStories.userStories[i].label %></span>
+                                <span><%= response.userStories[i].id %> </span> &ensp;
+                                <span><%= response.userStories[i].label %></span>
                             </span>
                             <span>
-                                <span><%= userStories.userStories[i].importance %></span> &ensp;
-                                <span><%= userStories.userStories[i].difficulty %></span>
+                                <span><%= response.userStories[i].importance %></span> &ensp;
+                                <span><%= response.userStories[i].difficulty %></span>
                             </span>
                         </li>
                         <% } %>
@@ -74,7 +74,7 @@
                     <div class="col">
                         <form method="POST" action="/backlog/us">
                             <div class="form-group">
-                                <input type="hidden" name="idProject" value="<%= userStories.projectId %>">
+                                <input type="hidden" name="idProject" value="<%= response.projectId %>">
                             </div>
                             <div class="form-group">
                                 <label for="description">Description</label><br>
