--- a/code/web/template/actifTasks.ejs
+++ b/code/web/template/actifTasks.ejs
@@ -12,13 +12,13 @@
                     A FAIRE
                 </div>
                 <div class="card-body">
-                    <ul class="list-group sourceAndDestination">
+                    <ul class="list-group sourceAndDestination" data-dropzoneType="todo">
                         <% if (true) { %>
                             <li class="list-group-item text-center">Faites un glissez déposer pour ajouter une tâche</li>
                         <% } %>
                         <% response.tasks.forEach((task, index) => { %>
                             <% if (task.state === "todo") { %>
-                                <li id="<%= index + 'a' %>" class="list-group-item d-flex flex-column justify-content-between mb-2 draggable" draggable="true">
+                                <li id="<%= task.id %>" class="list-group-item d-flex flex-column justify-content-between mb-2 draggable" draggable="true">
                                     <div>
                                         <span>ID: <%= task.id %> </span> &ensp;
                                         <span>US: <%= task.us %> </span>
@@ -37,10 +37,10 @@
                     EN COURS
                 </div>
                 <div class="card-body">
-                    <ul class="list-group sourceAndDestination">
+                    <ul class="list-group sourceAndDestination" data-dropzoneType="doing">
                        <% response.tasks.forEach((task, index) => { %>
                             <% if (task.state === "doing") { %>
-                                <li id="<%= index + 'a' %>" class="list-group-item d-flex flex-column justify-content-between mb-2 draggable" draggable="true">
+                                <li id="<%= task.id %>" class="list-group-item d-flex flex-column justify-content-between mb-2 draggable" draggable="true">
                                     <div>
                                         <span>ID: <%= task.id %> </span> &ensp;
                                         <span>US: <%= task.us %> </span>
@@ -63,13 +63,13 @@
                     TERMINEE
                 </div>
                 <div class="card-body">
-                    <ul class="list-group sourceAndDestination">
+                    <ul class="list-group sourceAndDestination" data-dropzoneType="done">
                         <% if (true) { %>
                             <li class="list-group-item text-center">Faites un glissez déposer pour ajouter une tâche</li>
                         <% } %>
                         <% response.tasks.forEach((task, index) => { %>
                             <% if (task.state === "done") { %>
-                                <li id="<%= index + 'a' %>" class="list-group-item d-flex flex-column justify-content-between mb-2 draggable" draggable="true">
+                                <li id="<%= task.id %>" class="list-group-item d-flex flex-column justify-content-between mb-2 draggable" draggable="true">
                                     <div>
                                         <span>ID: <%= task.id %> </span> &ensp;
                                         <span>US: <%= task.us %> </span>
