mise en place d'un menu de navigation

--- a/code/web/template/actifTasks.ejs
+++ b/code/web/template/actifTasks.ejs
@@ -4,7 +4,8 @@
         <%- include('head'); %>
         <script src="/js/actifTasks.js" defer></script>
     </head>
-<body class="container">
+<body class="container-fluid">
+    <%- include('header'); %>
     <div class="row">
         <div class="col-4">
             <div class="card">
