--- a/code/web/template/project.ejs
+++ b/code/web/template/project.ejs
@@ -6,6 +6,8 @@
     </head>
 
     <body>
+
+        <%- include('header'); %>
         <h1 class="text-center">Accueil</h1>
         <div class="container">
             <div class="row justify-content-center mb-2">
