--- a/code/web/template/task.ejs
+++ b/code/web/template/task.ejs
@@ -4,7 +4,8 @@
         <%- include('head'); %>
         <script src="/js/task.js" defer></script>
     </head>
-<body class="container">
+<body class="container-fluid">
+    <%- include('header'); %>
     <%- include('createTask'); %>
     <div class="row">
         <div class="col">
