--- a/code/web/template/backlog.ejs
+++ b/code/web/template/backlog.ejs
@@ -11,7 +11,8 @@
     </head>
 
 <body>
-    <div class="container">
+    <%- include('header'); %>
+    <div class="container-fluid">
         <div class="row my-3">
             <div class="col-6">
                 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
