--- a/code/web/template/editTask.ejs
+++ b/code/web/template/editTask.ejs
@@ -13,17 +13,13 @@
                 <h5 class="modal-title" id="edittask-modallabel">
                     Modification d'une tâche
                 </h5>
-                <button
-                    type="button"
-                    class="close"
-                    data-dismiss="modal"
-                    aria-label="Close"
-                >
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
-                <form method="post" onsubmit="onEditTaskSubmit(this);">
+                <form id="editTaskForm" method="post" onsubmit="onEditTaskSubmit(this)">
+                    <input type="hidden" id="method" name="method" value="put">
                     <div class="form-group">
                         <input
                             type="text"
@@ -61,6 +57,7 @@
                             name="userStory"
                             id="edittask-userstory"
                             required
+                            autocomplete="off"
                         />
                         <datalist id="edittask-userstories">
                             <% response.userStories.forEach(us => { %>
@@ -73,15 +70,14 @@
                     </div>
 
                     <div class="modal-footer">
-                        <button
-                            type="button"
-                            class="btn btn-secondary"
-                            data-dismiss="modal"
-                        >
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">
                             Annuler
                         </button>
-                        <button type="submit" class="btn btn-primary">
+                        <button type="submit" class="btn btn-primary" onclick="setMethod('put')">
                             Modifier
+                        </button>
+                        <button type="submit" class="btn btn-danger" onclick="setMethod('delete')">
+                            Supprimer
                         </button>
                     </div>
                 </form>
